--- a/.github/workflows/iristest.yml
+++ b/.github/workflows/iristest.yml
@@ -49,7 +49,7 @@ jobs:
         mvn -B clean package
     
     - name: Setup Iris Test
-      run:
+      run: |-
         mkdir TempServer
         java -jar Server/target/Server-1.2-SNAPSHOT.jar --test --model --workdir TempServer
         mkdir TempClient
