--- a/.github/workflows/iristest.yml
+++ b/.github/workflows/iristest.yml
@@ -62,4 +62,4 @@ jobs:
         wait < <(jobs -p)
         cat ServerOutput.txt
         cat ClientOutput.txt
-        test -f fail && echo "YAY!"
+        test -f fail || echo "YAY!"
